--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ body {
   height: 100vh;
   margin: 0 auto;
   background-color: #e0e8ff;
-  background-image: url(/images/pattern-background-desktop.svg);
+  background-image: url(../images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -71,7 +71,7 @@ body {
 }
 
 .order__hero {
-  background-image: url(/images/illustration-hero.svg);
+  background-image: url(../images/illustration-hero.svg);
   height: 22rem;
 }
 
